--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,25 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.7",
+        "sensio/framework-extra-bundle": "^5.4",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "4.3.*",
+        "symfony/security-csrf": "4.3.*",
+        "symfony/validator": "4.3.*",
+        "symfony/webpack-encore-bundle": "^1.6",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "symfony/debug-pack": "^1.0",
+        "symfony/maker-bundle": "^1.13",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
@@ -54,7 +66,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "4.3.*"
         }
     }
